--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,10 @@
   </head>
 
   <body>
-    
+
     <%= render 'layouts/navigation' %>
     <%= render 'layouts/messages' %>
+    <%= debug(params) if Rails.env.development? %>
     <div class="container">
       <%= yield %>
     </div>
