--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -51,3 +51,8 @@ $navbar-default-bg: black;
  font-weight: bold;
  font-size: 1.5em;
 }
+
+.article-meta-details {
+ border-top: 1px solid #eaeaea;
+ margin-top: 15px;
+}
